refactor: improve todos

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,10 +11,6 @@ Tasks
   2.Store Information
   3.Console to confirm
 
-
- 
-
-
   -----------------
   for 6th requirement
 
@@ -239,7 +235,7 @@ t1 =
 --------------------
 [*] retrieve from localStorage
 [*] loading page from server side
-[] order the directory structure
+[*] order the directory structure
 [] how to maintain data on server side; is it file
 [] add element to delete todo
 
